k8s/network-policies/default/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
spec:
  podSelector: {} # applies to all pods in namespace
  policyTypes:
    - Egress
  ingress: {}
