k8s/network-policies/default/allow-ingresss.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector: {} # applies to all pods in namespace
  policyTypes:
    - Ingress
  ingress: {}
