k8s/network-policies/default/denyegress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
spec:
  podSelector: {} # applies to all pods in namespace
  policyTypes:
    - Egress
