k8s/network-policies/default/denyingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
spec:
  podSelector: {} # applies to all pods in namespace
  policyTypes:
    - Ingress
